Fix overflow su firefox

--- a/src/app/mailbox/new-mail/new-mail.component.scss
+++ b/src/app/mailbox/new-mail/new-mail.component.scss
@@ -111,6 +111,10 @@ input:focus {
   // min-height: 250px;
 }
 
+.min-height-0 {
+  min-height: 0;  // Quickfix per l'overflow su firefox
+}
+
 ::ng-deep p-editor > div {
   height: 100%;
   display: flex;
